--- a/quiz-sequencias.html
+++ b/quiz-sequencias.html
@@ -62,7 +62,7 @@
         <span id="toastMessage"></span>
     </div>
 
-    <script src="assets/js/quiz.js"></script>
+    <script src="assets/js/quiz-sequencias.js"></script>
 
 
 </body>
